--- a/package.json
+++ b/package.json
@@ -17,23 +17,31 @@
     "@angular/compiler": "~9.1.7",
     "@angular/core": "~9.1.7",
     "@angular/forms": "~9.1.7",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
     "@fortawesome/angular-fontawesome": "~0.6.1",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/fontawesome-free": "^5.13.0",
     "@types/chart.js": "^2.9.21",
     "angular-bootstrap-md": "^9.3.1",
     "animate.css": "^4.1.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "mdbootstrap": "^4.19.0",
+    "nodemailer": "^6.4.8",
+    "nodemailer-handlebars": "^1.0.1",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
