--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "rxjs": "~6.5.4",
+    "smooth-scroll": "^16.1.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
