--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "prod": "ng serve --prod",
     "build": "ng build",
+    "build-prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -39,7 +41,7 @@
     "i": "^0.3.6",
     "jquery": "^3.5.1",
     "mdbootstrap": "^4.19.0",
-    "ng-embed-medium": "^1.0.1",
+    "ng-embed-medium": "^1.0.5",
     "ng-medium": "0.0.6",
     "nodemailer": "^6.4.8",
     "nodemailer-handlebars": "^1.0.1",
