--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "echo DO NOT FORGET TO RUN npm run build"
+      "pre-commit": "echo \n\nDO NOT FORGET TO RUN npm run build\n\n"
     }
   },
   "devDependencies": {
