--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "husky": "^4.3.8",
     "i": "^0.3.6",
     "jquery": "^3.5.1",
+    "live-server": "^1.2.1",
     "mdbootstrap": "^4.19.0",
     "merge2": "^1.4.1",
     "ng-embed-medium": "^1.0.5",
